Part2/Exercise2.06/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: logoutput-pingpong
  name: logoutput-reader-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
